--- a/package.json
+++ b/package.json
@@ -23,15 +23,20 @@
     "jspdf": "^2.5.1",
     "keep-react": "^1.0.1",
     "moment": "^2.29.4",
-    "react": "^18.2.0",
+    "react": "^18.0.0",
     "react-circular-progressbar": "^2.1.0",
     "react-datepicker": "^4.18.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.3.1",
+    "react-particles": "^2.12.2",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "react-to-pdf": "^1.0.1",
     "react-to-print": "^2.14.15",
-    "styled-components": "^6.1.1"
+    "react-typed": "^1.2.0",
+    "styled-components": "^6.1.1",
+    "swiper": "^8.4.5",
+    "tsparticles-slim": "^2.12.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
