--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage":"https://react-js-simplify-template-website-5scqgh9s5-sumonta056.vercel.app/" ,
   "private": true,
   "version": "0.0.0",
   "type": "module",
