--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-particles": "^2.12.2",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
+    "react-switch": "^7.0.0",
     "react-to-pdf": "^1.0.1",
     "react-to-print": "^2.14.15",
     "react-typed": "^1.2.0",
