add: Rating System in App

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "phosphor-react": "^1.4.1",
     "react": "^18.0.0",
     "react-circular-progressbar": "^2.1.0",
+    "react-countup": "^6.5.0",
     "react-datepicker": "^4.18.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.2",
