--- a/package.json
+++ b/package.json
@@ -31,11 +31,13 @@
     "react-datepicker": "^4.18.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.2",
-    "react-icons": "^4.3.1",
+    "react-icons": "^4.12.0",
     "react-particles": "^2.12.2",
+    "react-plx": "^2.1.2",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
+    "react-slick": "^0.29.0",
     "react-switch": "^7.0.0",
     "react-to-pdf": "^1.0.1",
     "react-to-print": "^2.14.15",
